# daikin-matter-thermostat

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  format-code  prj.conf  prj_release.conf  run-unit-tests  xiao-external-antenna.overlay
boards/: xiao_nrf54l15_nrf54l15_cpuapp_internal.conf  xiao_nrf54l15_nrf54l15_cpuapp_internal.overlay
src/: airconditioner_manager.cpp  airconditioner_manager.h  airconditioner_shell.cpp  app_task.cpp  app_task.h  main.cpp  matter_to_s21_translator.cpp  matter_to_s21_translator.h  s21_to_matter_translator.cpp  s21_to_matter_translator.h  temp_sensor_manager.cpp  temp_sensor_manager.h  temperature_manager.cpp  temperature_manager.h  zcl_callbacks.cpp
src/default_zap/: room-airconditioner.matter  room-airconditioner.zap
src/default_zap/zap-generated/: CodeDrivenCallback.h  CodeDrivenInitShutdown.cpp  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
src/s21/: S21DataLink.h  S21DataLinkUart.cpp  S21DataLinkUart.h  S21Frame.cpp  S21Frame.h  S21Presentation.cpp  S21Presentation.h  S21Stack.cpp  S21Stack.h  s21_datalink.h  s21_datalink_uart.cpp  s21_datalink_uart.h  s21_frame.cpp  s21_frame.h  s21_manager.cpp  s21_manager.h  s21_pinconfig.h  s21_presentation.cpp  s21_presentation.h  s21_presentation_sync.h  s21_presentation_sync_adapter.cpp  s21_presentation_sync_adapter.h  s21_shell.cpp  s21_stack.cpp  s21_stack.h
src/sync/: aai_fan_control.cpp  aai_fan_control.h  aai_humidity.cpp  aai_humidity.h  aai_installer.cpp  aai_installer.h  aai_onoff.cpp  aai_onoff.h  aai_thermostat.cpp  aai_thermostat.h  aai_translation.h  atomic_buffer.cpp  atomic_buffer.h  bridge_kernel.h  change_publisher.cpp  change_publisher.h  changed_attributes_listener.h  command_router.cpp  command_router.h  fan_mapping.h  logical_ac_state.h  logical_attribute.h  matter_attribute_path.h  monotonic_time_source.h  operational_mode.h  projector.cpp  projector.h  reconciler.cpp  reconciler.h  s21_command.h  s21_observation.h  sensor_field.h  setpoint_math.h  sync_coordinator.cpp  sync_coordinator.h  sync_reader.cpp  sync_reader.h  sync_stack.cpp  sync_stack.h  time_source.h  (+2 more)
src/temperature_measurement/: sensor.cpp  sensor.h
sysbuild/mcuboot/boards/: xiao_nrf54l15_nrf54l15_cpuapp_internal.overlay
tests/: CMakeLists.txt
tests/integration/s21_datalink_uart/: CMakeLists.txt  prj.conf  testcase.yaml
tests/integration/s21_datalink_uart/boards/: xiao_nrf54l15_nrf54l15_cpuapp_internal.overlay
tests/integration/s21_datalink_uart/src/: main.cpp
tests/matter_to_s21_translator/: test_matter_to_s21_translator.cpp
tests/matter_to_s21_translator/chip_stubs/app-common/zap-generated/attributes/: Accessors.h
tests/s21/: mock_s21_datalink.h  mock_s21_presentation_sync.h  test_s21_frame.cpp  test_s21_manager.cpp  test_s21_presentation.cpp
tests/s21_to_matter_translator/: test_s21_to_matter_translator.cpp
tests/s21_to_matter_translator/chip_stubs/app-common/zap-generated/attributes/: Accessors.h
tests/sync/: test_aai_translation.cpp  test_atomic_buffer.cpp  test_bridge_kernel.cpp  test_change_publisher.cpp  test_command_router.cpp  test_fan_control_spec.cpp  test_fan_mapping.cpp  test_integration.cpp  test_intent_bundle.cpp  test_logical_ac_state.cpp  test_logical_attribute.cpp  test_operational_mode.cpp  test_projector.cpp  test_reachable.cpp  test_reconciler.cpp  test_smoke.cpp  test_sync_coordinator_snapshot.cpp  test_threading.cpp  test_twin_field.cpp
tests/sync/chip_stubs/app-common/zap-generated/attributes/: Accessors.h
